<resources>
    <string name="app_name">BookingAppTim24</string>
    <string name="app_title">Open Doors</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unexpected_error">Unexpected error.</string>
    <string name="login_email">Email:</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_password">Password:</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="role_picker">I am a...</string>
    <string name="role_host">host</string>
    <string name="role_guest">guest</string>
    <string name="register_first_name">First name:</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="register_last_name">Last name:</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="register_country">Country:</string>
    <string name="register_city">City:</string>
    <string name="city_hint">Enter your city</string>
    <string name="register_address">Street:</string>
    <string name="address_hint">Enter your street</string>
    <string name="register_street_number">House number:</string>
    <string name="number_hint">Enter your house number</string>
    <string name="register_phone">Phone number:</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="back_button">Back</string>
    <string name="sign_up_button">Sign up</string>
    <string-array name="countries">
        <item>United States of America</item>
        <item>Canada</item>
        <item>Mexico</item>
        <item>Serbia</item>
        <item>Other</item>
    </string-array>
    <string name="create_acc_name">Accommodation name:</string>
    <string name="create_acc_name_hint">Enter accommodation name</string>
    <string name="confirmation">Reservation confirmation:</string>
    <string name="automatic_true">automatic</string>
    <string name="automatic_false">manual</string>
    <string name="acc_description">Description:</string>
    <string name="acc_description_hint">Provide a description</string>
    <string name="acc_type">Accommodation type:</string>
    <string name="create_deadline">Deadline for booking a reservation:</string>
    <string name="min_guests">Minimal number of guests:</string>
    <string name="max_guests">Maximal number of guests:</string>
    <string name="default_price">Default price:</string>
    <string name="price_type">Price type:</string>
    <string name="per_guest">per guest</string>
    <string name="total">total</string>
    <string name="create_acc_btn">Create</string>
    <string name="choose_amenities">Choose amenities</string>
    <string name="click_available_dates">Click the dates when the accommodation is available.</string>
    <string name="click_seasonal_rates_dates">Click the dates that should have the seasonal rate.</string>
    <string name="instruction_initial">Click a date to choose the start of an available period.</string>
    <string name="instruction_set_future_date">Please select a date equal to or after the starting date of the available period: %s</string>
    <string name="instruction_date_available">Date %s is already marked as available. Please select a different date for the end of the available period starting with %s.</string>
    <string name="instruction_accommodation_available">"Accommodation is available from %s to %s."</string>
    <string name="instruction_deleted">Date %s deleted.</string>
    <string name="instruction_start_date_selected">Date %s selected as start of available period. Please select the end of the available period.</string>
    <string name="availability_new_range">Available period: %s to %s.</string>
    <string name="seasonal_rate_price">Price of seasonal rate:</string>
    <string name="seasonal_rate_error">Please enter a valid non-negative price.</string>
    <string name="seasonal_rate_new_rate">A new price of %f from %s to %s.</string>
    <string name="toast_accommodation_created">Accommodation created successfully.</string>
    <string name="dialog_delete_images">Are you sure you want to delete all images for this accommodation?</string>
    <string name="toast_delete_images">Images set to be deleted</string>
    <string name="toast_no_camera_permission">No permission to open camera.</string>
    <string name="name_validation">Accommodation name is required.</string>
    <string name="price_validation">Please enter a valid non-negative price.</string>
    <string name="city_validation">City is required.</string>
    <string name="street_validation">Street is required</string>
    <string name="toast_validations">Please enter the data according to the validations.</string>
    <string name="settings">Settings</string>
    <string name="profile_title">Profile</string>
    <string name="nav_show_all_title">Accommodations</string>
    <string name="reservations_title">Reservations</string>
    <string name="favorites_title">Favorites</string>
    <string name="notifications_title">Notifications</string>
    <string name="my_accommodations_title">My accommodations</string>
    <string name="my_pending_accommodations_title">My pending accommodations</string>
    <string name="reported_users_title">Reported users</string>
    <string name="blocked_users_title">Blocked users</string>
    <string name="reported_reviews">Reported reviews</string>
    <string name="pending_accommodations">Pending accommodations</string>
    <string name="accommodation_details">Accommodation details</string>
    <string name="report_guest">Report a guest</string>
    <string name="report_host">Report a host</string>
    <string name="report_user">Report a user</string>
    <string name="reviews_of_me">Reviews of me</string>
    <string name="host_reviews">Host reviews</string>
    <string name="accommodation_reviews">Accommodation reviews</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="notifications_header">Notifications</string>
    <string name="role">Role:</string>
    <string name="password_change">Changing my password:</string>
    <string name="current_password">Current password:</string>
    <string name="new_password">New password:</string>
    <string name="edit_profile">Editing my profile</string>
    <string name="edit_account">Edit account</string>
    <string name="delete_profile">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="save">Save</string>
    <string name="continue_not_login">Continue as unregistered user</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_profile_image">Delete image</string>
    <string name="delete_all_images">Delete images</string>
    <string name="change_profile_image">Change image</string>
    <string name="add_image">Add image</string>
    <string name="approve">Approve</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="deny">Deny</string>
    <string name="dismiss">Dismiss</string>
    <string name="block_user">Block user</string>
    <string name="unblock_user">Unblock user</string>
    <string name="create_accommodation">Add an accommodation</string>
    <string name="financial_report">Financial report</string>
    <string name="make_reservation">Make reservation</string>
    <string name="start_date">Select start date</string>
    <string name="end_date">Select end date</string>
    <string name="search_accommodations">Search accommodations</string>
    <string name="filter_accommodations">Filter accommodations</string>
    <string name="accommodation_types">Accommodation types</string>
    <string name="amenities">Amenities</string>
    <string name="price_range">Price range</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="not_rated">Not rated</string>
    <string name="file_report">File report</string>
    <string name="submit_review">Submit review</string>
    <string name="report_review">Report review</string>
    <string name="withdraw_report">Withdraw report</string>
    <string name="delete_review">Delete review</string>
    <string name="reservation_pricing">Pricing</string>
    <string name="search_requests">Search requests</string>
    <string name="accommodation_name">Accommodation name</string>
    <string name="filter_requests">Filter requests</string>
    <string name="date_range_report">Date range report</string>
    <string name="accommodation_id_report">Accommodation ID report</string>
    <string name="time_period">Time period:</string>
    <string name="accommodation">Accommodation:</string>
    <string name="selected_start_date">Selected start date:</string>
    <string name="selected_end_date">Selected end date:</string>
    <string name="get_report">Get report</string>
    <string name="login_title">Log into your account</string>
    <string name="reg_title">Create a new account</string>
    <string name="create_acc_title">Create accommodation</string>
    <string name="selected_images_title">New selected images:</string>
    <string name="pending_reviews_title">Pending reviews</string>
    <string name="accommodation_image_descriptor">Accommodation image</string>
    <string name="no_accommodation_name">No accommodation name</string>
    <string name="request_id">Request ID: </string>
    <string name="status">Status: </string>
    <string name="guest">Guest: </string>
    <string name="number_of_guests">Number of guests: </string>
    <string name="total_price">Total price: </string>
    <string name="hosts_you_have_stayed_with">Hosts you have stayed with:</string>
    <string name="guests_you_have_hosted">Guests you have hosted:</string>
    <string name="no_users_to_report">There are no %s for you to report.</string>
    <string name="reason_for_report">Reason for report...</string>
    <string name="no_reason_error">Please provide a reason for the report.</string>
    <string name="dialog_report_user">Are you sure you want to report this user?</string>
    <string name="no_rating_error">Please rate the host between 1 and 5 stars.</string>
    <string name="user">User:</string>
    <string name="dialog_delete_review">Are you sure you want to delete this review?</string>
    <string name="pending_review">Your pending review:</string>
    <string name="reviews">Reviews:</string>
    <string name="no_accommodation_reviews">This accommodation has no reviews.</string>
    <string name="no_host_reviews">This host has no reviews.:</string>
    <string name="average_rating">Average rating:</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_connect_to_the_internet">Please connect to the internet and try again.</string>
    <string name="go_to_wi_fi">Go to Wi-Fi Settings</string>
    <string name="exit">Exit</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="notification_settings">Notification settings:</string>
    <string name="new_reservation_requests">For new reservation requests</string>
    <string name="reservation_request_status_changes">For reservation request status changes</string>
    <string name="new_host_reviews">For new host reviews</string>
    <string name="new_accommodation_reviews">For new accommodation reviews</string>
    <string name="save_settings">Save settings</string>
    <string name="no_notifications">You do not have any notifications yet.</string>
</resources>