<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_show_all"
            android:title="@string/nav_show_all_title"/>

        <item android:id="@+id/nav_host_accommodations"
            android:title="@string/my_accommodations_title"/>

        <item android:id="@+id/nav_host_pending_accommodations"
            android:title="@string/my_pending_accommodations_title"/>

        <item android:id="@+id/nav_reservation_requests"
            android:title="@string/reservations_title"/>

        <item android:id="@+id/nav_notifications"
            android:title="@string/notifications_title"/>

        <item android:id="@+id/nav_profile"
            android:title="@string/profile_title"/>

        <item android:id="@+id/host_reviews"
            android:title="@string/reviews_of_me"/>

        <item android:id="@+id/nav_report_user"
            android:title="@string/report_guest"/>


    </group>

</menu>