<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_show_all"
            android:title="@string/nav_show_all_title"/>

        <item android:id="@+id/nav_reported_users"
            android:title="@string/reported_users_title"/>

        <item android:id="@+id/nav_reported_comments"
            android:title="@string/reported_comments"/>

        <item android:id="@+id/nav_pending_reviews"
            android:title="@string/pending_reviews_title"/>

        <item android:id="@+id/nav_pending_accommodations"
            android:title="@string/pending_accommodations"/>

        <item android:id="@+id/nav_profile"
            android:title="@string/profile_title"/>

    </group>

</menu>