<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:layout_marginVertical="20dp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginVertical="10dp"/>

        <!-- Password EditText -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:autofillHints="password"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginVertical="10dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorPrimary"
            android:layout_marginVertical="10dp"/>
        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_not_login"
            android:textColor="?attr/colorPrimary"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/gray" />

    </LinearLayout>


</ScrollView>